--- a/site/001-Front-end/nav-front-end.html
+++ b/site/001-Front-end/nav-front-end.html
@@ -11,25 +11,21 @@
   <header class="bgc-header">
     <nav aria-label="Fil d'ariane" class="nav-header">
       <div>
-        <a href="../../index.html">
-          <img class="arrow-left vert-align" src="../images/arrow-left.png">
-        </a>
-        <a href="../../index.html">
-          <img class="arrow-left vert-align" src="../images/check.png">
-        </a>
-        <a href="../005-Back-end/MainMenuBackEnd.html">
-          <img class="arrow-left vert-align" src="../images/arrow-right.png" alt="Retour vers Front-end">
-        </a>
-        <a href="../../index.html">
-          <img class="arrow-left vert-align" src="../images/home.png">
-        </a>
+        <!-- Arrow left -->
+        <img id="arrowLeft" class="arrow-left vert-align" src="../images/arrow-left.png">
+        <!-- Validation -->
+        <img id="validation" class="arrow-left vert-align" src="../images/check.png">
+        <!-- Arrow right -->
+        <img id="arrowRight" class="arrow-left vert-align" src="../images/arrow-right.png" alt="Retour vers Front-end">
+        <!-- Home -->        
+        <img id="home" class="arrow-left vert-align" src="../images/home.png">
       </div>
       <ul class="breadcrumb">
         <li><a href="../../index.html">Accueil</a></li>
-        <li class="active">Front-end</li>
-        <li><a href="../005-Back-end/MainMenuBackEnd.html">Back-end</a></li>
-        <li><a href="../liens-utiles.html">Liens utiles</a></li>
-        <li><a href="../lexique.html">Lexique</a></li>
+        <li><a class="active" href="../001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
+        <!-- <li><a href="#">HTML5 et CSS3</a></li> -->
+        <li><a href="../006-Design/mainMenuDesign.html">Design</a></li>
+        <li><a href="../001-Front-end/02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html">JavaScript</a></li>
       </ul>
     </nav>
   </header>
@@ -77,5 +73,6 @@
     </section>
     <p class="text-center">&copy;2021 - Graduate développeur PHP/Symfony</p>
   </footer>
+  <script src="/script/script.js"></script>
 </body>
 </html>
