--- a/site/006-Design/adobeXD.html
+++ b/site/006-Design/adobeXD.html
@@ -11,15 +11,20 @@
   <header class="bgc-header">
     <nav aria-label="Fil d'ariane" class="nav-header">
       <div>
-        <a href="../001-Front-end/MainMenuFrontEnd.html">
-          <img class="arrow-left vert-align" src="../images/arrow-left.png">
-        </a>
-        <img class="arrow-left vert-align" src="../images/arrow-right.png">
+        <!-- Arrow left -->
+        <img id="arrowLeft" class="arrow-left vert-align" src="../images/arrow-left.png">
+        <!-- Validation -->
+        <img id="validation" class="arrow-left vert-align" src="../images/check.png">
+        <!-- Arrow right -->
+        <img id="arrowRight" class="arrow-left vert-align" src="../images/arrow-right.png" alt="Retour vers Front-end">
+        <!-- Home -->        
+        <img id="home" class="arrow-left vert-align" src="../images/home.png">
       </div>
       <ul class="breadcrumb">
         <li><a href="../../index.html">Accueil</a></li>
         <li><a href="../001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
-        <li class="active">Adobe XD</li>
+        <li><a href="../006-Design/mainMenuDesign.html">Design</a></li>
+        <li><a class="active" href="../006-Design/adobeXD.html">Adobe XD</a></li>
       </ul>
     </nav>
   </header>
@@ -36,5 +41,6 @@
       </section>
     </aside>
   </main>
+  <script src="/script/script.js"></script>
 </body> 
 </html>
