--- a/site/006-Design/mainMenuDesign.html
+++ b/site/006-Design/mainMenuDesign.html
@@ -11,17 +11,29 @@
   <header class="bgc-header">
     <nav aria-label="Fil d'ariane" class="nav-header">
       <div>
-        <a href="../001-Front-end/MainMenuFrontEnd.html">
+        <!-- <a href="../001-Front-end/MainMenuFrontEnd.html">
           <img class="arrow-left vert-align" src="../images/arrow-left.png">
         </a>
         <a href="adobeXD.html">
           <img class="arrow-left vert-align" src="../images/arrow-right.png">
-        </a>
+        </a> -->
+
+
+
+
+        <!-- Arrow left -->
+        <img id="arrowLeft" class="arrow-left vert-align" src="../images/arrow-left.png">
+        <!-- Validation -->
+        <img id="validation" class="arrow-left vert-align" src="../images/check.png">
+        <!-- Arrow right -->
+        <img id="arrowRight" class="arrow-left vert-align" src="../images/arrow-right.png">
+        <!-- Home -->
+        <img id="home" class="arrow-left vert-align" src="../images/home.png">                
       </div>
       <ul class="breadcrumb">
         <li><a href="../../index.html">Accueil</a></li>
         <li><a href="../001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
-        <li class="active">Design</li>
+        <li><a class="active" href="../006-Design/mainMenuDesign.html">Design</a></li>
         <li><a href="adobeXD.html">adobeXD</a></li>
       </ul>
     </nav>
@@ -68,5 +80,6 @@
     </section>
     <p class="text-center">&copy;2021 - Graduate développeur PHP/Symfony</p>
   </footer>
+  <script src="/script/script.js"></script>
 </body>
 </html>
