--- a/site/liens-utiles.html
+++ b/site/liens-utiles.html
@@ -11,22 +11,20 @@
   <header class="bgc-header">
     <nav aria-label="Fil d'ariane" class="nav-header">
       <div>
-        <a href="005-Back-end/MainMenuBackEnd.html">
-          <img class="arrow-left vert-align" src="../site/images/arrow-left.png">
-        </a>
-        <img class="arrow-left vert-align" src="../site/images/check.png">
-        <a href="lexique.html">
-          <img class="arrow-left vert-align" src="../site/images/arrow-right.png">
-        </a>
-        <a href="../index.html">
-          <img class="arrow-left vert-align" src="../site/images/home.png">
-        </a>
+        <!-- Arrow left -->
+        <img id="arrowLeft" class="arrow-left vert-align" src="../site/images/arrow-left.png">
+        <!-- Validation -->
+        <img id="validation" class="arrow-left vert-align" src="../site/images/check.png">
+        <!-- Arrow right -->
+        <img id="arrowRight" class="arrow-left vert-align" src="../site/images/arrow-right.png">
+        <!-- Home -->
+        <img id="home" class="arrow-left vert-align" src="../site/images/home.png">
       </div>
       <ul class="breadcrumb">
         <li><a href="../index.html">Accueil</a></li>
         <li><a href="../site/001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
         <li><a href="../site/005-Back-end/MainMenuBackEnd.html">Back-end</a></li>
-        <li class="active">Liens utiles</li>
+        <li><a class="active" href="liens-utiles.html">Liens utiles</a></li>
         <li><a href="lexique.html">Lexique</a></li>
       </ul>
     </nav>
@@ -84,5 +82,6 @@
     </section>
     <p class="text-center">&copy;2021 - Graduate développeur PHP/Symfony</p>
   </footer>
+  <script src="../script/script.js"></script>
 </body>
 </html>
