--- a/site/006-Design/adobeXD.html
+++ b/site/006-Design/adobeXD.html
@@ -25,6 +25,7 @@
         <li><a href="../001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
         <li><a href="../006-Design/mainMenuDesign.html">Design</a></li>
         <li><a class="active" href="../006-Design/adobeXD.html">Adobe XD</a></li>
+        <li><a href="../001-Front-end/02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html">JavaScript</a></li>
       </ul>
     </nav>
   </header>
