--- a/site/006-Design/mainMenuDesign.html
+++ b/site/006-Design/mainMenuDesign.html
@@ -11,16 +11,6 @@
   <header class="bgc-header">
     <nav aria-label="Fil d'ariane" class="nav-header">
       <div>
-        <!-- <a href="../001-Front-end/MainMenuFrontEnd.html">
-          <img class="arrow-left vert-align" src="../images/arrow-left.png">
-        </a>
-        <a href="adobeXD.html">
-          <img class="arrow-left vert-align" src="../images/arrow-right.png">
-        </a> -->
-
-
-
-
         <!-- Arrow left -->
         <img id="arrowLeft" class="arrow-left vert-align" src="../images/arrow-left.png">
         <!-- Validation -->
@@ -34,7 +24,7 @@
         <li><a href="../../index.html">Accueil</a></li>
         <li><a href="../001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
         <li><a class="active" href="../006-Design/mainMenuDesign.html">Design</a></li>
-        <li><a href="adobeXD.html">adobeXD</a></li>
+        <li><a href="../001-Front-end/02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html">JavaScript</a></li>
       </ul>
     </nav>
   </header>
