--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
     <nav aria-label="Fil d'ariane" class="nav-header">
       <div>
         <!-- Arrow left -->
-        <img id="arrowLeft" class="arrow-left vert-align" src="/site/images/arrow-left.png">
+        <img id="arrowLeft" class="arrow-left vert-align" src="site/images/arrow-left.png">
         <!-- Validation -->
-        <img id="validation" class="arrow-left vert-align" src="/site/images/check.png">
+        <img id="validation" class="arrow-left vert-align" src="site/images/check.png">
         <!-- Arrow right -->
-        <img id="arrowRight" class="arrow-left vert-align" src="/site/images/arrow-right.png">
+        <img id="arrowRight" class="arrow-left vert-align" src="site/images/arrow-right.png">
         <!-- Home -->
-        <img id="home" class="arrow-left vert-align" src="/site/images/home.png">
+        <img id="home" class="arrow-left vert-align" src="site/images/home.png">
       </div>
       <ul class="breadcrumb">
         <li><a class="active" href="/index.html">Accueil</a></li>
