--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img id="home" class="arrow-left vert-align" src="site/images/home.png">
       </div>
       <ul class="breadcrumb">
-        <li><a class="active" href="/index.html">Accueil</a></li>
+        <li><a class="active" href="index.html">Accueil</a></li>
         <li><a href="site/001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
         <li><a href="site/005-Back-end/MainMenuBackEnd.html">Back-end</a></li>
         <li><a href="site/liens-utiles.html">Liens utiles</a></li>
