--- a/site/001-Front-end/02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html
+++ b/site/001-Front-end/02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html
@@ -21,7 +21,7 @@
         <img id="home" class="arrow-left vert-align" src="../../images/home.png">
       </div>
       <ul class="breadcrumb">
-        <li><a href="/index.html">Accueil</a></li>
+        <li><a href="../../../index.html">Accueil</a></li>
         <li><a href="../MainMenuFrontEnd.html">Front-end</a></li>
         <li><a href="../../006-Design/mainMenuDesign.html">Design</a></li>
         <li><a class="active" href="MainMenuJavaScript.html">JavaScript</a></li>
