--- a/site/lexique.html
+++ b/site/lexique.html
@@ -13,20 +13,20 @@
     <nav aria-label="Fil d'ariane" class="nav-header">
       <div>
         <!-- Arrow left -->
-        <img id="arrowLeft" class="arrow-left vert-align" src="/site/images/arrow-left.png">
+        <img id="arrowLeft" class="arrow-left vert-align" src="images/arrow-left.png">
         <!-- Validation -->
-        <img id="validation" class="arrow-left vert-align" src="/site/images/check.png">
+        <img id="validation" class="arrow-left vert-align" src="images/check.png">
         <!-- Arrow right -->
-        <img id="arrowRight" class="arrow-left vert-align" src="/site/images/arrow-right.png" alt="Retour vers Front-end">
+        <img id="arrowRight" class="arrow-left vert-align" src="images/arrow-right.png" alt="Retour vers Front-end">
         <!-- Home -->
-        <img id="home" class="arrow-left vert-align" src="/site/images/home.png">
+        <img id="home" class="arrow-left vert-align" src="images/home.png">
       </div>
       <ul class="breadcrumb">
-        <li><a href="/index.html">Accueil</a></li>
-        <li><a href="/site/001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
-        <li><a href="/site/005-Back-end/MainMenuBackEnd.html">Back-end</a></li>
-        <li><a href="/site/liens-utiles.html">Liens utiles</a></li>
-        <li><a class="active" href="/site/lexique.html">Lexique</a></a></li>
+        <li><a href="../index.html">Accueil</a></li>
+        <li><a href="001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
+        <li><a href="005-Back-end/MainMenuBackEnd.html">Back-end</a></li>
+        <li><a href="liens-utiles.html">Liens utiles</a></li>
+        <li><a class="active" href="lexique.html">Lexique</a></a></li>
       </ul>
     </nav>
   </header>
