--- a/site/001-Front-end/nav-front-end.html
+++ b/site/001-Front-end/nav-front-end.html
@@ -23,7 +23,6 @@
       <ul class="breadcrumb">
         <li><a href="../../index.html">Accueil</a></li>
         <li><a class="active" href="../001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
-        <!-- <li><a href="#">HTML5 et CSS3</a></li> -->
         <li><a href="../006-Design/mainMenuDesign.html">Design</a></li>
         <li><a href="../001-Front-end/02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html">JavaScript</a></li>
       </ul>
@@ -33,10 +32,9 @@
     <section class="content-section">
       <nav>
         <section>
-          <h1 class="title-h1">Front-End</h1>
+          <h1 class="title-h1">Front-fezfzeEnd</h1>
         </section>
         <ul>
-          <li><a href="#">HTML5 et CSS3</a></li>
           <li><a href="../006-Design/mainMenuDesign.html">Design</a></li>
           <li><a href="02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html">Javascript</a></li>
         </ul>
