--- a/site/001-Front-end/nav-front-end.html
+++ b/site/001-Front-end/nav-front-end.html
@@ -22,9 +22,9 @@
       </div>
       <ul class="breadcrumb">
         <li><a href="../../index.html">Accueil</a></li>
-        <li><a class="active" href="../001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
+        <li><a class="active" href="MainMenuFrontEnd.html">Front-end</a></li>
         <li><a href="../006-Design/mainMenuDesign.html">Design</a></li>
-        <li><a href="02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html">JavaScript</a></li>
+        <li><a href="../001-Front-end/02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html">JavaScript</a></li>
       </ul>
     </nav>
   </header>
@@ -36,7 +36,7 @@
         </section>
         <ul>
           <li><a href="../006-Design/mainMenuDesign.html">Design</a></li>
-          <li><a href="02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html">Javascript</a></li>
+          <li><a href="../001-Front-end/02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html">Javascript</a></li>
         </ul>
         </nav>
     </section>
