--- a/site/001-Front-end/02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html
+++ b/site/001-Front-end/02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html
@@ -33,14 +33,8 @@
       <section class="content-section">
         <h2 class="sub-title-h2">Sommaire</h2>
         <ul class="ul-p17 li-empty">
-          <li>
-            <a href="basesJS.html">Les bases JavaScript</a>
-          </a>
-          </li>
-          <li>
-            <a href="../03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html">Dynamiser son site web</a>
-          </a>
-          </li>
+          <li><a href="basesJS.html">Les bases JavaScript</a></li>
+          <li><a href="../03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html">Dynamiser son site web</a></li>
         </ul>
       </section>
     </nav>
@@ -75,6 +69,6 @@
     </section>
     <p class="text-center">&copy;2021 - Graduate développeur PHP/Symfony</p>
   </footer>
-  <script src="/script/script.js"></script>
+  <script src="../../../script/script.js"></script>
 </body>
 </html>
