--- a/site/001-Front-end/02-Initiation_a_la_programmation_Javascript/basesJS.html
+++ b/site/001-Front-end/02-Initiation_a_la_programmation_Javascript/basesJS.html
@@ -11,16 +11,20 @@
   <header class="bgc-header">
     <nav aria-label="Fil d'ariane" class="nav-header">
       <div>
-        <a href="MainMenuJavaScript.html">
-          <img class="arrow-left vert-align" src="../../images/arrow-left.png">
-        </a>
-        <img class="arrow-left vert-align" src="../../images/arrow-right.png" alt="Retour vers Front-end">
+        <!-- Arrow left -->
+        <img id="arrowLeft" class="arrow-left vert-align" src="../../images/arrow-left.png">
+        <!-- Validation -->
+        <img id="validation" class="arrow-left vert-align" src="../../images/check.png">
+        <!-- Arrow right -->
+        <img id="arrowRight" class="arrow-left vert-align" src="../../images/arrow-right.png">
+        <!-- Home -->
+        <img id="home" class="arrow-left vert-align" src="../../images/home.png">
       </div>
       <ul class="breadcrumb">
         <li><a href="../../../index.html">Accueil</a></li>
-        <li><a href="../MainMenuFrontEnd.html">Front-end</a></li>
-        <li><a href="MainMenuJavaScript.html">JavaScript</a></li>
-        <li class="active">Les bases JavaScript</li>
+        <li><a href="../../001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
+        <li><a href="../02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html">JavaScript</a></li>
+        <li><a class="active" href="basesJS.html">Les bases JavaScript</a></li>
       </ul>
     </nav>
   </header>
@@ -81,5 +85,6 @@
     </section>
     <p class="text-center">&copy;2021 - Graduate développeur PHP/Symfony</p>
   </footer>
+  <script src="../../../script/script.js"></script>
 </body>
 </html>
