--- a/site/001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html
+++ b/site/001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html
@@ -11,16 +11,20 @@
   <header class="bgc-header">
     <nav aria-label="Fil d'ariane" class="nav-header">
       <div>
-        <a href="../02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html">
-          <img class="arrow-left vert-align" src="../../images/arrow-left.png">
-        </a>
-        <img class="arrow-left vert-align" src="../../images/arrow-right.png">
+        <!-- Arrow left -->
+        <img id="arrowLeft" class="arrow-left vert-align" src="../../images/arrow-left.png">
+        <!-- Validation -->
+        <img id="validation" class="arrow-left vert-align" src="../../images/check.png">
+        <!-- Arrow right -->
+        <img id="arrowRight" class="arrow-left vert-align" src="../../images/arrow-right.png">
+        <!-- Home -->
+        <img id="home" class="arrow-left vert-align" src="../../images/home.png">
       </div>
       <ul class="breadcrumb">
         <li><a href="../../../index.html">Accueil</a></li>
-        <li><a href="../../001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
+        <li><a href="../MainMenuFrontEnd.html">Front-end</a></li>
         <li><a href="../02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html">JavaScript</a></li>
-        <li class="active">Dynamiser son site web</li>
+        <li><a class="active" href="dynSiteWebJSMenu.html">Dynamiser son site web</a></li>
       </ul>
     </nav>
   </header>
@@ -35,5 +39,6 @@
       </section>
     </nav>
   </main>
+  <script src="../../../script/script.js"></script>
 </body>
 </html>
