--- a/site/006-Design/adobeXD.html
+++ b/site/006-Design/adobeXD.html
@@ -42,6 +42,6 @@
       </section>
     </aside>
   </main>
-  <script src="/script/script.js"></script>
+  <script src="../../script/script.js"></script>
 </body> 
 </html>
