--- a/site/006-Design/mainMenuDesign.html
+++ b/site/006-Design/mainMenuDesign.html
@@ -70,6 +70,6 @@
     </section>
     <p class="text-center">&copy;2021 - Graduate développeur PHP/Symfony</p>
   </footer>
-  <script src="/script/script.js"></script>
+  <script src="../../script/script.js"></script>
 </body>
 </html>
