--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body class="container">
   <header class="bgc-header">
     <nav aria-label="Fil d'ariane" class="nav-header">
-      <div>
+      <div id="navigation">
         <!-- Arrow left -->
         <img id="arrowLeft" class="arrow-left vert-align" src="site/images/arrow-left.png">
-        <!-- Validation -->
-        <img id="validation" class="arrow-left vert-align" src="site/images/check.png">
         <!-- Arrow right -->
         <img id="arrowRight" class="arrow-left vert-align" src="site/images/arrow-right.png">
+        <!-- Validation -->
+        <img id="validation" class="arrow-left vert-align" src="site/images/check.png">
         <!-- Home -->
         <img id="home" class="arrow-left vert-align" src="site/images/home.png">
       </div>
@@ -30,6 +30,9 @@
     </nav>
   </header>
   <main>
+    <section id="main-title">
+      <h1>Graduate développeur PHP/Synfony</h1>
+    </section>
     <section class="content-section">
       <h1 class="title-h1">Plan</h1>
       <nav>
