--- a/site/001-Front-end/jquery.html
+++ b/site/001-Front-end/jquery.html
@@ -10,45 +10,45 @@
 <body class="container">
   <header class="bgc-header">
     <nav aria-label="Fil d'ariane" class="nav-header">
-      <div>
-        <a href="../001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html">
-          <img class="arrow-left vert-align" src="../images/arrow-left.png">
-        </a>
-        <img class="arrow-left vert-align" src="../images/arrow-right.png">
+      <div id="navigation">
+        <!-- Arrow left -->
+        <img id="arrowLeft" class="arrow-left vert-align" src="../images/arrow-left.png">
+        <!-- Arrow right -->
+        <img id="arrowRight" class="arrow-left vert-align" src="../images/arrow-right.png">
+        <!-- Validation -->
+        <img id="validation" class="arrow-left vert-align" src="../images/check.png">
+        <!-- Home -->
+        <img id="home" class="arrow-left vert-align" src="../images/home.png">
       </div>
       <ul class="breadcrumb">
         <li><a href="../../index.html">Accueil</a></li>
         <li><a href="../001-Front-end/MainMenuFrontEnd.html">Front-end</a></li>
-        <li><a href="../001-Front-end/02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html">JavaScript</a>
-        </li>
-        <li><a href="../001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html">
-          Dynamiser son site web</a>
-        </li>
-        <li class="active">jQuery</li>
+        <li><a href="../001-Front-end/03-Dynamiser_vos_sites_web_avec_Javascript/dynSiteWebJSMenu.html">Dynamiser son site web</a></li>
+        <li><a class="active" href="site/lexique.html">jQuery</a></li>
       </ul>
     </nav>
   </header>
   <main>
     <aside class="menu-aside">
-        <section class="content-section">
-          <h1 class="title-h1">jQuery</h1>
-          <h2 class="title-h3">Menu</h2>
-          <nav aria-label="Menu général sur jQuery">
-            <ul  class="nav-menu">
-              <li><a href="#intro">Introduction</a></li>
-              <li><a href="#doc">Documentation</a></li>
-              <li><a href="#install">Installer jQuery</a></li>
-              <li><a href="#use">Comment utiliser jQuery</a></li>
-              <li><a href="#syntaxe">Syntaxe générale</a></li>
-              <li><a href="#selectors">Les sélecteurs jQuery</a></li>
-              <li><a href="#event">La programmation événementielle</a></li>
-              <li><a href="#add">Ajouter un élément</a></li>
-              <li><a href="#remove">Supprimer un élément</a></li>
-              <li><a href="#trigger">Simuler un événement</a></li>
-            </ul>
-          </nav>
-        </section>
-      </aside>
+      <section class="content-section">
+        <h1 class="title-h1">jQuery</h1>
+        <h2 class="title-h3">Menu</h2>
+        <nav aria-label="Menu général sur jQuery">
+          <ul  class="nav-menu">
+            <li><a href="#intro">Introduction</a></li>
+            <li><a href="#doc">Documentation</a></li>
+            <li><a href="#install">Installer jQuery</a></li>
+            <li><a href="#use">Comment utiliser jQuery</a></li>
+            <li><a href="#syntaxe">Syntaxe générale</a></li>
+            <li><a href="#selectors">Les sélecteurs jQuery</a></li>
+            <li><a href="#event">La programmation événementielle</a></li>
+            <li><a href="#add">Ajouter un élément</a></li>
+            <li><a href="#remove">Supprimer un élément</a></li>
+            <li><a href="#trigger">Simuler un événement</a></li>
+          </ul>
+        </nav>
+      </section>
+    </aside>
     <section class="content-section">
       <h1 class="title-h1">jQuery</h1>
       <article>
@@ -361,5 +361,6 @@
     </section>
     <p class="text-center">&copy;2021 - Graduate développeur PHP/Symfony</p>
   </footer>
+  <script src="../../script/script.js"></script>
 </body>
 </html>
