--- a/site/005-Back-end/MainMenuBackEnd.html
+++ b/site/005-Back-end/MainMenuBackEnd.html
@@ -10,13 +10,13 @@
 <body class="container">
   <header class="bgc-header">
     <nav aria-label="Fil d'ariane" class="nav-header">
-      <div>
+      <div id="navigation">
         <!-- Arrow left -->
         <img id="arrowLeft" class="arrow-left vert-align" src="../images/arrow-left.png">
-        <!-- Validation -->
-        <img id="validation" class="arrow-left vert-align" src="../images/check.png">
         <!-- Arrow right -->
         <img id="arrowRight" class="arrow-left vert-align" src="../images/arrow-right.png" alt="Retour vers Front-end">
+        <!-- Validation -->
+        <img id="validation" class="arrow-left vert-align" src="../images/check.png">
         <!-- Home -->
         <img id="home" class="arrow-left vert-align" src="../images/home.png">
       </div>
