--- a/site/006-Design/adobeXD.html
+++ b/site/006-Design/adobeXD.html
@@ -10,13 +10,13 @@
 <body class="container">
   <header class="bgc-header">
     <nav aria-label="Fil d'ariane" class="nav-header">
-      <div>
+      <div id="navigation">
         <!-- Arrow left -->
         <img id="arrowLeft" class="arrow-left vert-align" src="../images/arrow-left.png">
-        <!-- Validation -->
-        <img id="validation" class="arrow-left vert-align" src="../images/check.png">
         <!-- Arrow right -->
         <img id="arrowRight" class="arrow-left vert-align" src="../images/arrow-right.png" alt="Retour vers Front-end">
+        <!-- Validation -->
+        <img id="validation" class="arrow-left vert-align" src="../images/check.png">
         <!-- Home -->        
         <img id="home" class="arrow-left vert-align" src="../images/home.png">
       </div>
@@ -36,11 +36,31 @@
         <h2 class="title-h3">Menu</h2>
         <nav aria-label="Menu général sur jQuery">
           <ul  class="nav-menu">
-            <li><a href="#"></a></li>
+            <li><a href="#">Les bases d'Adobe XD</a></li>
+            <li><a href="#">Les répétitions et positionnement</a></li>
+            <li><a href="#">L'utilisation des composants</a></li>
+            <li><a href="#">Le prototyping</a></li>
           </ul>
         </nav>
       </section>
     </aside>
+    <section class="content-section">
+      <h1 class="title-h1" id="doc">Les bases d'Adobe XD</h1>
+      <article>
+        <h2 class="title-h2">Introduction</h2>
+        <p>Adobe XD est un logiciel permettant de concevoir, prototyper et partager des interfaces et des expériences 
+          interactives élaborées.
+        </p>
+        <h2 class="title-h2">L'interface</h2>
+        <p>L'espace de travail du logiciel est constitué d'une barre d'outils située à gauche et d'un inspecteur de 
+          propriétés situé à droite de l'interface.
+        </p>
+        <p>Sous Windows, vous devez utiliser le clic droit de la souris sur un élément afin d'accéder au menu contextuel. 
+          De plus, la version PC dispose d'un burger menu situé dans le coin supérieur gauche.
+        </p>
+        <img src="../006-Design/adobeXD/workspace.PNG" alt="Espace de travail Adobe XD">
+      </article>
+    </section>
   </main>
   <script src="../../script/script.js"></script>
 </body> 
