--- a/site/liens-utiles.html
+++ b/site/liens-utiles.html
@@ -10,13 +10,13 @@
 <body class="container">
   <header class="bgc-header">
     <nav aria-label="Fil d'ariane" class="nav-header">
-      <div>
+      <div id="navigation">
         <!-- Arrow left -->
         <img id="arrowLeft" class="arrow-left vert-align" src="images/arrow-left.png">
-        <!-- Validation -->
-        <img id="validation" class="arrow-left vert-align" src="images/check.png">
         <!-- Arrow right -->
         <img id="arrowRight" class="arrow-left vert-align" src="images/arrow-right.png">
+        <!-- Validation -->
+        <img id="validation" class="arrow-left vert-align" src="images/check.png">
         <!-- Home -->
         <img id="home" class="arrow-left vert-align" src="images/home.png">
       </div>
@@ -36,6 +36,7 @@
         <ul>
           <li><a href="https://developer.mozilla.org/fr/" target="_blank">MDN Web Docs</a></li>
           <li><a href="https://www.w3.org/" target="_blank">W3C</a></li>
+          <li><a href="https://www.w3schools.com/" target="_blank">w3schools</a></li>
           <li><a href="https://validator.w3.org/" target="_blank">W3C validator</a></li>
           <li><a href="http://ami.responsivedesign.is/" target="_blank">am-i-reponsive</a></li>
           <li><a href="https://caniuse.com/" target="_blank">Can I use ?</a></li>
