--- a/site/006-Design/mainMenuDesign.html
+++ b/site/006-Design/mainMenuDesign.html
@@ -10,13 +10,13 @@
 <body class="container">
   <header class="bgc-header">
     <nav aria-label="Fil d'ariane" class="nav-header">
-      <div>
+      <div id="navigation">
         <!-- Arrow left -->
         <img id="arrowLeft" class="arrow-left vert-align" src="../images/arrow-left.png">
-        <!-- Validation -->
-        <img id="validation" class="arrow-left vert-align" src="../images/check.png">
         <!-- Arrow right -->
         <img id="arrowRight" class="arrow-left vert-align" src="../images/arrow-right.png">
+        <!-- Validation -->
+        <img id="validation" class="arrow-left vert-align" src="../images/check.png">
         <!-- Home -->
         <img id="home" class="arrow-left vert-align" src="../images/home.png">                
       </div>
@@ -31,13 +31,11 @@
   <main>
     <section class="content-section">
       <nav>
-        <section>
-          <h1 class="title-h1">Design</h1>
-        </section>
+        <h1 class="title-h1">Design</h1>
         <ul>
           <li><a href="adobeXD.html">Adobe XD</a></li>
         </ul>
-        </nav>
+      </nav>
     </section>
   </main>
   <footer class="bgc-footer">
