--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="site/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">  <link rel="stylesheet" href="site/style.css">
   <title>Graduate développeur PHP/Symfony</title>
 </head>
 <body class="container">
@@ -30,11 +30,21 @@
     </nav>
   </header>
   <main>
-    <section id="main-title">
-      <h1>Graduate développeur PHP/Synfony</h1>
+    <section class="main-title">
+      <h1 id="title">Graduate développeur PHP/Symfony</h1>
     </section>
+    <div id="language">
+      <a href="#" title="Cours HTML5"><i id="html5" class="trans-y fab fa-html5 fa-4x"></i></a>
+      <a href="#" title="Cours css3"><i id="css3-alt" class="trans-y fab fa-css3-alt fa-4x"></i></a>
+      <a href="site/001-Front-end/02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html" 
+      title="Cours JavaScript"><i id="js-square" class="trans-y fab fa-js-square fa-4x"></i></a>
+      <a href="#" title="Cours php"><i id="php" class="trans-y fab fa-php fa-4x"></i></a>
+      <a href="site/003-Git_et_Github/mainMenuGit.html" title="Cours Github"><i id="github" class="trans-y fab fa-github fa-4x"></i></a>
+      <a href="site/lexique.html" title="Lexique"><i id="sort-alpha-down" class="trans-y fa fa-sort-alpha-down fa-4x"></i></a>
+      <a href="site/liens-utiles.html" title="Liens utiles"><i id="external-link-alt" class="trans-y fa fa-external-link-alt fa-4x"></i></a>
+    </div>
     <section class="content-section">
-      <h1 class="title-h1">Plan</h1>
+      <h2 class="title-h2">Plan</h2>
       <nav>
         <ul>
           <li><a href= "site/001-Front-end/MainMenuFrontEnd.html">Front-End</a></li>
