--- a/site/liens-utiles.html
+++ b/site/liens-utiles.html
@@ -49,6 +49,7 @@
           <li><a href="https://www.lafabriquedunet.fr/thematique/cahier-charges-site-web/" target="_blank">La fabrique du Net</a></li>
           <li><a href="../site/ressources/LaFabriqueduNet_Cahier_des_charges_de_site_internet.docx" target="_blank">Modèle de CdC de La fabrique du Net</a></li>
           <li><a href="https://friconix.com/" target="_blank">Friconix (icônes gratuites)</a></li>
+          <li><a href="https://bezier.method.ac/" target="_blank">Tuto outil plume</a></li>
         </ul>
       </nav>
     </section>
