--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section class="main-title">
       <h1 id="title">Graduate développeur PHP/Symfony</h1>
     </section>
-    <div id="language">
+    <div id="language" class="content-section">
       <a href="#" title="Cours HTML5"><i id="html5" class="trans-y fab fa-html5 fa-4x"></i></a>
       <a href="#" title="Cours css3"><i id="css3-alt" class="trans-y fab fa-css3-alt fa-4x"></i></a>
       <a href="site/001-Front-end/02-Initiation_a_la_programmation_Javascript/MainMenuJavaScript.html" 
@@ -43,17 +43,6 @@
       <a href="site/lexique.html" title="Lexique"><i id="sort-alpha-down" class="trans-y fa fa-sort-alpha-down fa-4x"></i></a>
       <a href="site/liens-utiles.html" title="Liens utiles"><i id="external-link-alt" class="trans-y fa fa-external-link-alt fa-4x"></i></a>
     </div>
-    <section class="content-section">
-      <h2 class="title-h2">Plan</h2>
-      <nav>
-        <ul>
-          <li><a href= "site/001-Front-end/MainMenuFrontEnd.html">Front-End</a></li>
-          <li><a href= "site/005-Back-end/MainMenuBackEnd.html">Back-End</a></li>
-          <li><a href= "site/liens-utiles.html">Liens utiles</a></li>
-          <li><a href= "site/lexique.html">lexique</a></li>
-        </ul>
-      </nav>
-    </section>
   </main>
   <footer class="bgc-footer">
     <section>
@@ -71,14 +60,8 @@
             <a href="https://friconix.com/" target="_blank" title="Vers Friconix">Friconix</a>
           </li>
           <li> 
-            <svg class="logo-friconix" role="img" xmlns="http://www.w3.org/2000/svg" 
-              width="1000mm" height="1000mm" 
-              viewBox="0 0 1000 1000" >
-              <path id="path" fill="currentColor" 
-                d="M 75 0C 75 0 75 0 75 0C 33 0 0 33 0 75C 0 75 0 925 0 925C 0 967 33 1000 75 1000C 75 1000 925 1000 925 1000C 967 1000 1000 967 1000 925C 1000 925 1000 75 1000 75C 1000 33 967 0 925 0C 925 0 75 0 75 0 M 809 146C 826 146 847 160 876 174C 926 199 901 225 876 274C 851 324 825 300 776 274C 725 250 750 225 776 174C 786 153 797 146 809 146C 809 146 809 146 809 146M 400 150C 400 150 576 150 576 150C 701 150 701 300 576 300C 576 300 400 300 400 300C 301 300 251 350 251 450C 251 450 251 750 251 750C 251 874 101 874 101 750C 101 750 101 450 101 450C 101 275 226 150 400 150C 400 150 400 150 400 150M 826 331C 863 331 901 362 901 424C 901 424 901 750 901 750C 901 874 751 874 751 750C 751 750 751 424 751 424C 751 362 788 331 826 331C 826 331 826 331 826 331M 376 424C 376 424 576 424 576 424C 701 424 701 574 576 574C 576 574 376 574 376 574C 251 574 251 424 376 424C 376 424 376 424 376 424" transform="">
-              </path>
-            </svg>
-            <a href="#">Friconix</a>
+            <svg id="font-awesome" aria-hidden="true" focusable="false" data-prefix="fab" data-icon="font-awesome-flag" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="color-inherit svg-inline--fa fa-font-awesome-flag fa-w-14 fa-fw" style="transform-origin: 0.4375em 0.5em;"><g transform="translate(224 256)" class=""><g transform="translate(0, 0)  scale(0.5625, 0.5625)  rotate(0 0 0)" class=""><path fill="currentColor" d="M444.373 359.424c0 7.168-6.144 10.24-13.312 13.312-28.672 12.288-59.392 23.552-92.16 23.552-46.08 0-67.584-28.672-122.88-28.672-39.936 0-81.92 14.336-115.712 29.696-2.048 1.024-4.096 1.024-6.144 2.048v77.824c0 21.405-16.122 34.816-33.792 34.816-19.456 0-34.816-15.36-34.816-34.816V102.4C12.245 92.16 3.029 75.776 3.029 57.344 3.029 25.6 28.629 0 60.373 0s57.344 25.6 57.344 57.344c0 18.432-8.192 34.816-22.528 45.056v31.744c4.124-1.374 58.768-28.672 114.688-28.672 65.27 0 97.676 27.648 126.976 27.648 38.912 0 81.92-27.648 92.16-27.648 8.192 0 15.36 6.144 15.36 13.312v240.64z" transform="translate(-224 -256)" class=""></path></g></g></svg>
+            <a href="https://fontawesome.com/" target="_blank">Font awesome</a>
           </li>
         </ul>
       </nav>
